src/test/ui/issues/issue-44078.stderr
error[E0765]: unterminated double quote string
  --> $DIR/issue-44078.rs:2:8
   |
LL |       "😊"";
   |  _________^
LL | | }
   | |__^

error: this file contains an unclosed delimiter
  --> $DIR/issue-44078.rs:3:3
   |
LL | fn main() {
   |           - unclosed delimiter
LL |     "😊"";
LL | }
   |   ^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `";
}
"`
  --> $DIR/issue-44078.rs:2:8
   |
LL |   fn main() {
   |             - unclosed delimiter
LL |       "😊"";
   |           ^
   |           |
   |           expected one of `.`, `;`, `?`, `}`, or an operator
   |  _________help: `}` may belong here
   | |
LL | | }
   | |__^ unexpected token

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0765`.
